--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,12 @@ gradle-app.setting
 
 # Cache of project
 .gradletasknamecache
+.gradle/8.2/executionHistory/executionHistory.lock
+.gradle/8.2/executionHistory/executionHistory.lock
+.gradle/8.2/fileHashes/fileHashes.bin
+.gradle/8.2/fileHashes/fileHashes.lock
+.gradle/buildOutputCleanup/buildOutputCleanup.lock
+.gradle/buildOutputCleanup/outputFiles.bin
+.gradle/config.properties
+.gradle/config.properties
+*.lock
