--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,10 @@
             android:name="edu.dg202433.sabriter.authentification.RegisterActivity"
             android:exported="true" />
 
+        <activity
+            android:name="edu.dg202433.sabriter.PayementActivity"
+            android:exported="true" />
+
 
 
     </application>
